src/parser/snapshots/monkey_language_server__parser__test__hash_unhappy_1.snap
---
source: src/parser/test.rs
description: "{A}"
expression: result
---
[
    Hash {
        token: Token(LBrace, "{", (0,0)->(0,1)),
        kv_pairs: Ok(
            [
                Err(
                    Err(ExpectedTokenNotFound("SyntaxError: Expected ':' not found."), (0,1)->(0,2)),
                ),
            ],
        ),
    },
]

===================================

{A}
 ^ [Error] SyntaxError: Expected ':' not found.
