src/parser/snapshots/monkey_language_server__parser__test__hash_unhappy_10.snap
---
source: src/parser/test.rs
description: "{1:2, @:2}"
expression: result
---
[
    Hash {
        token: Token(LBrace, "{", (0,0)->(0,1)),
        kv_pairs: Ok(
            [
                Ok(
                    (
                        Int {
                            token: Token(Int, "1", (0,1)->(0,2)),
                            value: 1,
                        },
                        Int {
                            token: Token(Int, "2", (0,3)->(0,4)),
                            value: 2,
                        },
                    ),
                ),
                Err(
                    Err(UnexpectedToken("SyntaxError: Unexpected '@'."), (0,6)->(0,7)),
                ),
            ],
        ),
    },
]

===================================

{1:2, @:2}
      ^ [Error] SyntaxError: Unexpected '@'.
