src/parser/snapshots/monkey_language_server__parser__test__hash_unhappy_1_errors.snap
---
source: src/parser/test.rs
description: "{A}"
expression: "parser_errors(\"{A}\", errors)"
---
{A}
 ^ SyntaxError: Unexpected '}'.
